--- a/app/car/carForm.html
+++ b/app/car/carForm.html
@@ -34,10 +34,25 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <div class="checkbox">
-                    <label>
-                        <input class="input-sm" type="checkbox" name="hasBrakes" ng-model="car.hasBrakes">Has Brakes
-                    </label>
+                    <label for="hasBrakes">Has Brakes</label>
+                    <input class="input-sm" type="checkbox" id="hasBrakes" name="hasBrakes" ng-model="car.hasBrakes">
                 </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label input-sm">Longitude</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control input-sm" name="lon"
+                       placeholder="-80.0" ng-model="car.lon">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label input-sm">Latitude</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control input-sm" name="lat"
+                       placeholder="25.0" ng-model="car.lat">
             </div>
         </div>
 
