Refactor car list and remove car into their own directives and clean up logic.

--- a/app/car/carForm.html
+++ b/app/car/carForm.html
@@ -1,5 +1,5 @@
 <fieldset>
-    <form action="" method="" class="form-horizontal form-compact carForm" role="form" ng-submit="addCar()">
+    <form class="form-horizontal form-compact carForm" role="form" ng-submit="addCar()">
         <div class="form-group">
             <label class="col-sm-2 control-label input-sm">Id</label>
 
