Refactor garage browser to reuse directives

--- a/app/car/carForm.html
+++ b/app/car/carForm.html
@@ -1,4 +1,4 @@
-<fieldset>
+<fieldset ng-disabled="disabled">
     <form class="form-horizontal form-compact carForm" role="form" ng-submit="addCar()">
         <div class="form-group">
             <label class="col-sm-2 control-label input-sm">Id</label>
