--- a/app/browser/garageBrowser.html
+++ b/app/browser/garageBrowser.html
@@ -6,8 +6,11 @@
         <div id="carCollectionEditor" class="list-group pull-left">
             <car-items-list cars="cars" selected-car="selectedCar"></car-items-list>
         </div>
-        <div id="selectedCarDetailsEditor" class="pull-left">
+        <div id="selectedCarDetailsEditor" class="pull-left" ng-show="selectedCar">
             <car-form car="selectedCar" engine-types="appCtrl.engineTypes" disabled="{{disabled}}"></car-form>
+        </div>
+        <div ng-hide="selectedCar">
+            Select a car from the list!
         </div>
     </div>
 </div>
