--- a/app/car/carForm.html
+++ b/app/car/carForm.html
@@ -57,7 +57,7 @@
         </div>
 
 
-        <div class="form-group">
+        <div class="form-group" ng-hide="disabled">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit"
                         class="btn btn-primary saveButton input-sm">Save
