--- a/index.html
+++ b/index.html
@@ -29,23 +29,6 @@
 
     <style>
         @import url(app/vendor/Cesium/Widgets/widgets.css);
-        /*#cesium-container {*/
-            /*position: absolute;*/
-            /*top: 0;*/
-            /*left: 0;*/
-            /*height: 100%;*/
-            /*width: 100%;*/
-            /*margin: 0;*/
-            /*overflow: hidden;*/
-            /*padding: 0;*/
-            /*font-family: sans-serif;*/
-        /*}*/
-
-        /*body {*/
-            /*padding: 0;*/
-            /*margin: 0;*/
-            /*overflow: hidden;*/
-        /*}*/
     </style>
 
 </head>
@@ -85,13 +68,13 @@
                     <remove-car-panel></remove-car-panel>
                 </div>
 
-                <div class="col-sm-7" id="garageEditor" ng-controller="editorController as editorCtrl">
+                <div class="col-sm-7" id="garageEditor">
                     <garage-browser></garage-browser>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-5" id="garageBrowser" ng-controller="browserController as bc">
+                <div class="col-sm-5" id="garageBrowser">
                     <garage-browser disabled="true"></garage-browser>
                 </div>
 
@@ -112,22 +95,21 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div style="display: none;" class="col-sm-7" id="log">
-                    <div>
+            <div class="row">
+                <div class="col-sm-12" id="log">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Log</h3>
+                        </div>
+                        <div class="panel-body">
+                            <textarea class="form-control logArea" rows="15" readonly=""></textarea>
 
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Log</h3>
-                            </div>
-                            <div class="panel-body">
-                                <textarea class="form-control logArea" rows="15" readonly=""></textarea>
-
-                                <div class="text-right">
-                                    <button type="button" class="btn btn-primary btn-sm clearButton"
-                                            style="margin-top: 7px;">Clear
-                                    </button>
-                                </div>
+                            <div class="text-right">
+                                <button type="button" class="btn btn-primary btn-sm clearButton"
+                                        style="margin-top: 7px;">Clear
+                                </button>
                             </div>
                         </div>
                     </div>
