--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 
             <div class="row">
 
-                <div class="col-sm-3" id="addCar" ng-controller="addController as addCtrl">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Add Car</h3>
-                        </div>
-                        <div class="panel-body">
-                            <car-form car="addCtrl.car" engine-types="appCtrl.engineTypes"></car-form>
-                        </div>
-                    </div>
+                <div class="col-sm-3" id="addCar">
+                    <!--<div class="panel panel-primary">-->
+                        <!--<div class="panel-heading">-->
+                            <!--<h3 class="panel-title">Add Car</h3>-->
+                        <!--</div>-->
+                        <!--<div class="panel-body">-->
+                            <!--<car-form car="addCtrl.car" engine-types="appCtrl.engineTypes"></car-form>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <add-car-panel></add-car-panel>
                 </div>
 
 
