Fix app controller missing bug

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section id="main">
     <div id="garageWrapper">
 
-        <div class="container-fluid" ng-controller="appController as appCtrl">
+        <div class="container-fluid">
 
             <div class="row">
 
