--- a/index.html
+++ b/index.html
@@ -51,14 +51,6 @@
             <div class="row">
 
                 <div class="col-sm-3" id="addCar">
-                    <!--<div class="panel panel-primary">-->
-                        <!--<div class="panel-heading">-->
-                            <!--<h3 class="panel-title">Add Car</h3>-->
-                        <!--</div>-->
-                        <!--<div class="panel-body">-->
-                            <!--<car-form car="addCtrl.car" engine-types="appCtrl.engineTypes"></car-form>-->
-                        <!--</div>-->
-                    <!--</div>-->
                     <add-car-panel></add-car-panel>
                 </div>
 
@@ -98,20 +90,7 @@
 
             <div class="row">
                 <div class="col-sm-12" id="log">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Log</h3>
-                        </div>
-                        <div class="panel-body">
-                            <textarea class="form-control logArea" rows="15" readonly=""></textarea>
-
-                            <div class="text-right">
-                                <button type="button" class="btn btn-primary btn-sm clearButton"
-                                        style="margin-top: 7px;">Clear
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    <garage-log></garage-log>
                 </div>
             </div>
         </div>
